--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
-  "name": "vite-plugin-glsl",
-  "description": "Import, inline (and compress) GLSL shader files",
-  "homepage": "https://github.com/UstymUkhman/vite-plugin-glsl#readme",
+  "name": "vite-plugin-lygia",
+  "description": "Import GLSL from lygia.xyz",
+  "homepage": "https://github.com/Nek/vite-plugin-lygia#readme",
   "packageManager": "^npm@9.8.0",
   "types": "./src/index.d.ts",
   "module": "./src/index.js",
   "main": "./src/index.js",
-  "version": "1.3.1",
+  "version": "1.0.0",
   "private": false,
   "license": "MIT",
   "type": "module",
   "author": {
-    "name": "Ustym Ukhman",
-    "email": "ustym.ukhman@gmail.com",
-    "url": "https://github.com/UstymUkhman/"
+    "name": "Nikita Dudnik",
+    "email": "nikdudnik@gmail.com",
+    "url": "https://github.com/nek0/"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/UstymUkhman/vite-plugin-glsl.git"
+    "url": "git+https://github.com/Nek/vite-plugin-lygia.git"
   },
   "bugs": {
-    "url": "https://github.com/UstymUkhman/vite-plugin-glsl/issues",
-    "email": "ustym.ukhman@gmail.com"
+    "url": "https://github.com/Nek/vite-plugin-lygia/issues",
+    "email": "nikdudnik@gmail.com"
   },
   "publishConfig": {
     "save-dev": true,
@@ -37,12 +37,12 @@
   "files": [
     "package.json",
     "README.md",
-    "yarn.lock",
     "ext.d.ts",
     "LICENSE",
     "src"
   ],
   "keywords": [
+    "lygia",
     "vite",
     "glsl",
     "webgl",
@@ -66,6 +66,7 @@
     "@rollup/pluginutils": "^5.1.0"
   },
   "devDependencies": {
+    "node-fetch": "^3.3.2",
     "vite": "^6.0.1"
   },
   "engines": {
