--- a/package.json
+++ b/package.json
@@ -63,11 +63,11 @@
     "vite": "^3.0.0 || ^4.0.0 || ^5.0.0 || ^6.0.0"
   },
   "dependencies": {
-    "@rollup/pluginutils": "^5.1.0"
+    "@rollup/pluginutils": "^5.1.4",
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
-    "node-fetch": "^3.3.2",
-    "vite": "^6.0.1"
+    "vite": "^6.0.7"
   },
   "engines": {
     "node": ">= 16.15.1",
